Changed posts, made website more professional.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: A Livre Journal
-description: Writing about programming, French, self-improvement, literature, my life & hotdogs.
+name: Essays & Stories
+description: Brennan's journal of literature, life, and passion for furthering humanity.
 meta_description: "A Personal Journal about learning by Brennan Brown."
 
 markdown: redcarpet
