--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,15 @@
-name: Essays & Stories
-description: Brennan's journal of literature, life, and passion for furthering humanity.
-meta_description: "A Personal Journal about learning by Brennan Brown."
+name: Your New Jekyll Site
+description: Blogging about stuffs
+meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
 markdown: redcarpet
 highlighter: pygments
 logo: false
 paginate: 15
 baseurl: /
-domain_name: 'brenjour.github.io'
-google_analytics: 'UA-54919711-1'
+domain_name: 'http://yourblog-domain.com'
+google_analytics: 'UA-XXXXXXXX-X'
 
 # Details for the RSS feed generator
-url:            'brenjour.github.io'
-author:         'Brennan Brown'
-
-# My Settings
-
-permalink: /:title
+url:            'blog url'
+author:         'Your Name'
